<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
    
  <groupId>org.praxislive</groupId>
  <artifactId>praxiscore</artifactId>
  <version>5.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>
    
  <name>PraxisCORE</name>
  <description>Modular JVM runtime for cyberphysical programming, supporting real-time coding of real-time systems. A distributed forest-of-actors architecture, runtime code changes and comprehensive introspection, bring aspects of Erlang, Smalltalk and Extempore into the Java world.</description>
  <url>https://www.praxislive.org</url>
    
  <modules>
    <module>praxiscore-api</module>
    <module>praxiscore-base</module>
    <module>praxiscore-code</module>
    <module>praxiscore-logging</module>
    <module>praxiscore-util</module>
    <module>praxiscore-components</module>
    <module>praxiscore-core-code</module>
    <module>praxiscore-code-services</module>
    <module>praxiscore-hub</module>
    <module>praxiscore-script</module>
    <module>praxiscore-launcher</module>
    <module>praxiscore-bin</module>
    <module>praxiscore-data</module>
    <module>praxiscore-video</module>
    <module>praxiscore-settings</module>
    <module>praxiscore-video-code</module>
    <module>praxiscore-video-components</module>
    <module>praxiscore-video-gstreamer</module>
    <module>praxiscore-video-pgl</module>
    <module>praxiscore-video-pgl-natives</module>
    <module>praxiscore-video-pgl-code</module>
    <module>praxiscore-internal-osc</module>
    <module>praxiscore-internal-httpd</module>
    <module>praxiscore-hub-net</module>
    <module>praxiscore-audio</module>
    <module>praxiscore-audio-code</module>
    <module>praxiscore-audio-components</module>
    <module>praxiscore-internal-audioio</module>
    <module>praxiscore-tinkerforge</module>
    <module>praxiscore-tinkerforge-lib</module>
    <module>praxiscore-gui</module>
    <module>praxiscore-midi</module>
    <module>praxiscore-osc</module>
    <module>praxiscore-tracker</module>
  </modules>
    
  <scm>
    <url>https://github.com/praxis-live/praxiscore/tree/master</url>
    <connection>scm:git:https://github.com/praxis-live/praxiscore.git</connection>
    <developerConnection>scm:git:https://github.com/praxis-live/praxiscore.git</developerConnection>
  </scm>

  <distributionManagement>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
    <repository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
  </distributionManagement>

  <developers>
    <developer>
      <name>Neil C Smith</name>
      <roles>
        <role>Lead developer</role>
      </roles>
      <url>https://www.neilcsmith.net</url>
    </developer>
  </developers>
  
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>flatten-maven-plugin</artifactId>
          <version>1.1.0</version>
          <configuration>
            <flattenMode>ossrh</flattenMode>
          </configuration>
          <executions>
            <execution>
              <id>flatten</id>
              <phase>process-resources</phase>
              <goals>
                <goal>flatten</goal>
              </goals>
            </execution>
            <execution>
              <id>flatten.clean</id>
              <phase>clean</phase>
              <goals>
                <goal>clean</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.1.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.1</version>
          <configuration>
            <release>11</release>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
    
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>flatten-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>
  
  <profiles>
    <profile>
      <id>release</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>3.1.0</version>
            <executions>
              <execution>
                <id>attach-sources</id>
                <goals>
                  <goal>jar-no-fork</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>3.1.1</version>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
            <configuration>
              <additionalOptions>
                <additionalOption>-Xdoclint:none</additionalOption>
              </additionalOptions>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>1.6</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
  
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.deploy.skip>true</maven.deploy.skip>
  </properties>

</project>
